--- a/tests/README
+++ b/tests/README
@@ -2,4 +2,5 @@
 ./runTests.sh will run all the tests.
 
 Note: Code coverage doesn't appear to work for me in Safari Version 6.0.2 (8536.26.17) on Mountain Lion. (http://code.google.com/p/js-test-driver/issues/detail?id=410)
+This bug also applies to PhantomJS latest.
 There is also a bug in the coverage plugin causing Opera to hang (http://code.google.com/p/js-test-driver/issues/detail?id=357)
